<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/willkommen"
        android:layout_width="359dp"
        android:layout_height="61dp"
        android:text="@string/willkommen"
        android:textColor="#000000"
        android:textSize="36sp"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="94dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="178dp"
        android:contentDescription="@string/pictureAltText"
        tools:layout_editor_absoluteX="110dp"
        tools:layout_editor_absoluteY="273dp"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewVornamelogedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vorname"
        android:textColor="@color/blackColor"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="132dp"
        tools:layout_editor_absoluteY="164dp" />

    <TextView
        android:id="@+id/textViewNachnamelogedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nachname"
        android:textColor="@color/blackColor"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="164dp" />
</androidx.constraintlayout.widget.ConstraintLayout>