<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyColor">

    <TextView
        android:id="@+id/willkommen"
        android:layout_width="0dp"
        android:layout_height="165dp"
        android:layout_marginTop="14dp"
        android:text="@string/willkommen"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonLogout"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogout" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="178dp"
        android:contentDescription="@string/pictureAltText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/pfp" />

    <TextView
        android:id="@+id/textViewFirstnameWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/vorname"
        android:textColor="@color/blackColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/willkommen"
        app:layout_constraintEnd_toEndOf="@+id/textViewLastnameWelcome" />

    <TextView
        android:id="@+id/textViewLastnameWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/nachname"
        android:textColor="@color/blackColor"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textViewFirstnameWelcome"
        app:layout_constraintEnd_toEndOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/blueColor"
        android:onClick="goToLogin"
        android:text="@string/buttonLogout"
        android:textColor="@color/blackColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>